# littlegit

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  README.md  README.rst  littlegit.py  pyproject.toml  requirements-dev.txt  requirements_dev.txt  setup.py  tests.py
.githooks/: pre-commit
.github/workflows/: main.yml  pre-commit-autoupdate.yml
