[tool.black]
line-length = 99
target-version = ["py39", "py310", "py311", "py312", "py313"]
exclude = '''
/(
    .git|.venv
)/
'''

[tool.isort]
profile = "black"
float_to_top = true
skip_glob = ".venv"

[tool.poetry]
name = "littlegit"
version = "0.3.0"
description = "This is a little tiny wrapper around Git CLI"
authors = ["Daniele Esposti <daniele.esposti@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "License :: Public Domain",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: System",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^1.4"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-testmon = "^2.0.15"
pytest-timeout = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ".venv/"
check_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true

[tool.pytest.ini_options]
timeout = 10
